	  end-user programs will probably have their own dedicated start-up logic.
	  But, during development, you might want to have you applications
	  available and executable from the NSH command line.  This apps/ addon
	  (and NSH hooks) was contributed by Uros to accomplish just that.
	* sched/sched_waitpid() and include/sys/wait.h - Provides a simple and
	  very incomplete implementation of waitpid().  waitpid() is only available
	  if CONFIG_SCHED_WAITPID is defined in your configuration file.
	* sched/atexit.c and sched/exit.c - The atexit function is not frequently
	  used.  In order to save a few bytes, it is now conditioned on
	  CONFIG_SCHED_ATEXIT.  It your application is currently using atexit(),
	  you will need to add CONFIG_SCHED_ATEXT to your configuration file.
	* drivers/net/slip.c - Add a SLIP driver (untested on initial check-in).
	* configs/olimex-lpc1766stk/slip-httpd - An example that uses SLIP to
	  provide a serial-port based THTTPD web server.

5.20 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/lib_fopen() -- fopen() was not returning the correct errno value
	  when the underlying open() failed.
	* include/net/uip/uip-arch.h -- The uIP interface has been extended
	  slightly so that drivers can be concurrenly filling and sending
	  packet buffers.  This capability was needed by the SLIP driver.
	* drivers/net/slip.c -- Several corrections and some re-design of
	  of the driver.
	* apps/ChangeLog.txt -- the apps/ directory now has its own ChangeLog.
	* configs/vsn:
	  - IDLE LED blinking fix
	  - Added board power off function
	* arch/arm/src/stm32/stm32_gpio.c and stm32_internal.h -- Fixed
	  PullUp/Down Input Configuration.
	* arch/arm/src/lpc17xx/lpc17_serial.h -- Now supports Auto-RTS and
	  Auto-CTS modes.  This is needed to support SLIP.
	* drivers/net/slip.c -- SLIP is now basically functional on the
	  LPC17xx with some caveats as described in the TODO list under
	  LPC17xx.