@@ -1,4 +1,4 @@
-NuttX TODO List (Last updated March 15, 2011)
+NuttX TODO List (Last updated March 16 2011)
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
   (5)  Task/Scheduler (sched/)
@@ -8,7 +8,7 @@ NuttX TODO List (Last updated March 15, 2011)
   (1)  pthreads (sched/)
   (1)  C++ Support
   (5)  Binary loaders (binfmt/)
- (17)  Network (net/, drivers/net)
+ (16  Network (net/, drivers/net)
   (5)  Network Utilities (netutils/)
   (2)  USB (drivers/usbdev, drivers/usbhost)
   (5)  Libraries (lib/)
@@ -30,7 +30,7 @@ NuttX TODO List (Last updated March 15, 2011)
   (3)  ARM/STR71x (arch/arm/src/str71x/)
   (4)  ARM/LM3S6918 (arch/arm/src/lm3s/)
   (4)  ARM/STM32 (arch/arm/src/stm32/)
-  (1)  Intel x86 (arch/x86)
+  (0)  Intel x86 (arch/x86)
   (4)  8051 / MCS51 (arch/8051/)
   (2)  Hitachi/Renesas SH-1 (arch/sh/src/sh1)
   (4)  Renesas M16C/26 (arch/sh/src/m16c)
@@ -307,21 +307,6 @@ o Network (net/, drivers/net)
   Priority:    Medium.  All standards compatibility is important to NuttX.  However, most
                the mechanism for leaving and joining groups is hidden behind a wrapper
                function so that little of this incompatibilities need be exposed.
-
-  Description: The SLIP driver (drivers/net/slip.c) has had only the most superficial
-               testing.  Issues/Notes:
-               (1) A minor issue is that SLIP requires hardware handshake and
-                   that has not been implemented in the UART drivers on most platforms.
-                   You can use the slattach' option -L which enables "3-wire
-                   operation."  NOTE: This may also result in data overrun errors.
-               (2) Current State:  The driver connects and responds to PINGs (ICMP
-                   ECHO) commands.  However, when used with the TCP stack and THTTPD,
-                   there is some condition that causes a hang.  So the SLIP driver
-                   is still not ready for prime-time.
-               (3) Finally, the Linux slip driver is hard-coded to use an MTU of 296
-                   so setting CONFIG_NET_BUFSIZE to a 296 is also advised.
-  Status:      Open
-  Priority:    Medium
 
 o Network Utilities (netutils/)
 
@@ -948,10 +933,6 @@ o ARM/STM32 (arch/arm/src/stm32/)
 
 o Intel x86 (arch/x86)
   ^^^^^^^^^^^^^^^^^^^^
-
-  Description:  No timer interrupts in the QEMU configuration.
-  Status:       Open
-  Priorty:      Medium-High
 
 o 8051 / MCS51 (arch/8051/)
   ^^^^^^^^^^^^^^^^^^^^^^^^^
